# py-genai-space

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  STRUCTURE_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  security.yml
assets/data/sample/: README.md  sample_data.csv
assets/data/schemas/: user_schema.json
assets/dependencies/: README.md
assets/images/: README.md
docs/api/: README.md
docs/tutorials/: etl_pipeline_guide.md  getting_started.md
src/configs/: logging.py  settings.py
src/jobs/: sample_etl_job.py
src/notebooks/00_archived/: FaissStore.py  README.md
src/schemas/: __init__.py  data_models.py  document_processor.py  embedding_provider.py  file_data_models.py  text_chunker.py  vector_database.py
src/utilities/: ChromaStore.py  PDFFileDownloader.py  common.py
src/utilities/document_processors/: __init__.py  docx_processor.py  pdf_processor.py  txt_processor.py
src/utilities/embedding_providers/: __init__.py  cohere_embedding.py  embedding_cache.py  huggingface_embedding.py  openai_embedding.py
src/utilities/text_chunker/: __init__.py  fixed_size_chunker.py  sementaic_chunker.py  sentence_chunker.py  token_chunker.py
src/utilities/vector_databases/: __init__.py  chroma_store.py  faiss_store.py  inmemory_store.py
src/workflows/airflow/: sample_dag.py
src/workflows/schedulers/: custom_scheduler.py
templates/: config_template.yaml  job_template.py
tests/fixtures/: sample_data.py
tests/integration/: test_database.py
tests/unit/: test_sample.py
